--- a/html/src/ui.css
+++ b/html/src/ui.css
@@ -31,7 +31,7 @@ tr:first-child {
   padding: 0 1em;
   max-height: max(var(--card-height), 20vh);
   max-width: max(690px, calc(5.5 * var(--card-width)));
-  font-size: calc(1.3 * var(--card-name-height));
+  font-size: max(1em, calc(1.3 * var(--card-name-height)));
   overflow: scroll;
   scroll-snap-type: y mandatory;
   -ms-overflow-style: none;
@@ -99,6 +99,14 @@ tr:first-child {
   }
   .counter .label-text {
     top: -15%;
+  }
+  .trace {
+    font-size: max(1.5em, calc(1.3 * var(--card-name-height)));
+  }
+}
+@media(min-width: 1440px) {
+  .trace {
+    font-size: min(2em, calc(1.3 * var(--card-name-height)));
   }
 }
 
